welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:2: error: not enough arguments for method somme: (nums: Array[Int])Int.
Unspecified value parameter nums.
  return somme()/(nums.length)
              ^